--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,16 @@
 /.pnp
 .pnp.js
 
+# User-specific stuff
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/**/usage.statistics.xml
+.idea/**/dictionaries
+.idea/**/shelf
+
+# Generated files
+.idea/**/contentModel.xml
+
 # testing
 /coverage
 
